@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<!-- Copyright 2018 technosf [https://github.com/technosf] Licensed under 
 		the Apache License, Version 2.0 (the "License"); you may not use this file 
@@ -67,11 +65,12 @@ You should run this on you command-line: mvn jfx:native</description>
 		<pluginManagement>
 			<plugins>
 				<plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>11</source>
+						<target>11</target>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -87,7 +86,7 @@ You should run this on you command-line: mvn jfx:native</description>
 				<plugin>
 					<groupId>org.openjfx</groupId>
 					<artifactId>javafx-maven-plugin</artifactId>
-					<version>0.0.10</version>
+					<version>0.0.8</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -98,6 +97,17 @@ You should run this on you command-line: mvn jfx:native</description>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>3.2.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.2</version>
+					<configuration>
+						<argLine>
+                        --illegal-access=permit
+                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+                    </argLine>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
